--- a/install.txt
+++ b/install.txt
@@ -8,4 +8,4 @@
       yum install jenkins
       service jenkins start
       chkconfig jenkins on
-
+Set $JAVA_HOME on Jenkins at : /usr/lib/jvm/java-1.7.0-openjdk.x86_64
